force-app/main/default/objects/Campaign/fields/Automated_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Automated_Follow_Up_Date__c</fullName>
    <label>Automated Follow Up Date</label>
    <type>Date</type>
</CustomField>