force-app/main/default/objects/Campaign/fields/Custom_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Follow_Up_Date__c</fullName>
    <label>Custom Follow Up Date</label>
    <type>Date</type>
</CustomField>