force-app/main/default/objects/Campaign/fields/Custom_Text_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Custom_Text_Attendees__c</fullName>
    <label>Custom Text - Attendees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>