force-app/main/default/objects/Campaign/fields/Custom_Text_No_Shows__c.field-meta.xml
<CustomField>
    <fullName>Custom_Text_No_Shows__c</fullName>
    <label>Custom Text - No Shows</label>
    <length>255</length>
    <type>Text</type>
</CustomField>