force-app/main/default/objects/Campaign/fields/Date_Post_Event_Follow_Up_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Post_Event_Follow_Up_Requested__c</fullName>
    <label>Date Post Event Follow Up Requested</label>
    <type>Date</type>
</CustomField>