force-app/main/default/objects/Campaign/fields/Date_to_Send_Event_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Send_Event_Email_1__c</fullName>
    <label>Date to Send Event Email 1</label>
    <type>Date</type>
</CustomField>