force-app/main/default/objects/Campaign/fields/Date_to_Send_Event_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Send_Event_Email_2__c</fullName>
    <label>Date to Send Event Email 2</label>
    <type>Date</type>
</CustomField>