force-app/main/default/objects/Campaign/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <label>Event Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>