force-app/main/default/objects/Campaign/fields/Event_Email_2_Custom_Text__c.field-meta.xml
<CustomField>
    <fullName>Event_Email_2_Custom_Text__c</fullName>
    <label>Event Email 2 Custom Text</label>
    <type>TextArea</type>
</CustomField>