force-app/main/default/objects/Campaign/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cocktail reception</fullName>
            </value>
            <value>
                <fullName>Lunch and learn</fullName>
            </value>
            <value>
                <fullName>Facts and snacks</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Office presentation</fullName>
            </value>
            <value>
                <fullName>Agent training</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>