force-app/main/default/objects/Campaign/fields/In_Person_Virtual__c.field-meta.xml
<CustomField>
    <fullName>In_Person_Virtual__c</fullName>
    <label>In Person / Virtual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>