force-app/main/default/objects/Campaign/fields/Opened__c.field-meta.xml
<CustomField>
    <fullName>Opened__c</fullName>
    <label>Opened</label>
    <summaryFilterItems>
        <field>CampaignMember.Id</field>
        <operation>equals</operation>
        <value>Opened</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>