force-app/main/default/objects/Campaign/fields/Send_Automated_Email_After_Event__c.field-meta.xml
<CustomField>
    <fullName>Send_Automated_Email_After_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Automated Email After Event</label>
    <type>Checkbox</type>
</CustomField>