force-app/main/default/objects/Campaign/recordTypes/Campaign_Layout.recordType-meta.xml
<RecordType>
    <fullName>Campaign_Layout</fullName>
    <active>true</active>
    <label>Campaign Layout</label>
</RecordType>