force-app/main/default/objects/Campaign/recordTypes/Event.recordType-meta.xml
<RecordType>
    <fullName>Event</fullName>
    <active>true</active>
    <description>Used for sales team to create campaigns for client-facing events</description>
    <label>Event</label>
</RecordType>