force-app/main/default/objects/Campaign/listViews/ABC_Energy_Direct_Mail_Campaign.listView-meta.xml
<ListView>
    <fullName>ABC_Energy_Direct_Mail_Campaign</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>ABC Energy - Direct Mail Campaign</label>
</ListView>